--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 08 06:53:23 EEST 2016
-sdk.dir=C\:\\Users\\Veli\\AppData\\Local\\Android\\sdk
+#Thu Oct 20 01:14:29 EEST 2016
+sdk.dir=/home/veli/Android/Sdk
