--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '24.0.3'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.1'
 
     defaultConfig {
         applicationId "com.genonbeta.CoolSocket.test"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 8
-        versionName "1.0.7"
+        versionCode 9
+        versionName "1.0.8"
     }
     buildTypes {
         release {
@@ -20,8 +20,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:design:24+'
-    compile 'com.android.support:appcompat-v7:24+'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.github.kevinsawicki:http-request:6+'
     compile fileTree(include: ['*.jar'], dir: 'libs')
 }
