--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.1'
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.genonbeta.CoolSocket.test"
         minSdkVersion 14
-        targetSdkVersion 21
-        versionCode 11
-        versionName "1.0.9"
+        targetSdkVersion 25
+        versionCode 12
+        versionName "1.1.0"
     }
     buildTypes {
         release {
@@ -20,8 +20,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.github.kevinsawicki:http-request:6+'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':gdatabase')
