--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.genonbeta.CoolSocket.test"
         minSdkVersion 14
-        targetSdkVersion 25
-        versionCode 13
-        versionName "1.1.1"
+        targetSdkVersion 26
+        versionCode 12
+        versionName "1.1.2"
     }
     buildTypes {
         release {
@@ -20,10 +20,10 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.github.kevinsawicki:http-request:6+'
+    compile 'com.android.support:design:26.0.2'
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support:support-v4:26.0.2'
+    compile 'com.github.kevinsawicki:http-request:6.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':gdatabase')
 }
