--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 20 01:14:29 EEST 2016
-sdk.dir=/home/veli/Android/Sdk
+#Fri Nov 24 15:17:57 EET 2017
+sdk.dir=C\:\\Users\\Veli\\AppData\\Local\\Android\\Sdk
