--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.genonbeta.CoolSocket.test"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 12
         versionName "1.1.2"
     }
@@ -16,14 +16,20 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+        debug {
+            applicationIdSuffix '.debug'
+            versionNameSuffix '-DEBUG'
+        }
     }
 }
 
 dependencies {
-    compile 'com.android.support:design:26.0.2'
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.android.support:support-v4:26.0.2'
-    compile 'com.github.kevinsawicki:http-request:6.0'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':gdatabase')
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.github.kevinsawicki:http-request:6.0'
+    implementation 'com.genonbeta.android:gdatabase:1.0'
+    implementation 'com.genonbeta.coolsocket:main:1.0.2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 }
