--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.READ_SMS"/>
@@ -17,11 +18,11 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/text_appName"
         android:theme="@style/AppTheme">
         <activity
             android:name=".HomeActivity"
-            android:label="@string/app_name"
+            android:label="@string/text_appName"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -33,10 +34,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PairFinderActivity"
-            android:label="@string/pair_finder"/>
+            android:name=".PeerFinderActivity"
+            android:label="@string/text_peerFinder"/>
         <activity
             android:name=".TemplateListActivity"
-            android:label="@string/template_list"/>
+            android:label="@string/text_templateList"/>
     </application>
 </manifest>
