--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,18 @@ android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
+    lintOptions {
+        abortOnError false
+    }
+
     defaultConfig {
         applicationId "com.genonbeta.CoolSocket.test"
         minSdkVersion 14
         targetSdkVersion 27
-        versionCode 12
-        versionName "1.1.2"
+        versionCode 13
+        versionName "1.1.3"
     }
+
     buildTypes {
         release {
             minifyEnabled false
